# festvox

./: .gitignore  ACKNOWLEDGEMENTS  COPYING  Makefile  README.md  SPHINXTRAIN_UPDATE.md  Story  config.status  configure  configure.ac  configure.in  mkinstalldirs  readme.virat  tash show -p
challenges/blizzard2020/: README.md
challenges/blizzard2020/v1/: fnames.tacotrontestset.head  synth.sh  synth6.sh  synth8.sh  synth8a.sh
challenges/compare2018/crying/: results_baseline  run.sh
challenges/compare2020/elderly_emotions/: README.md
challenges/compare2020/masked_speech/: README.md
challenges/msrlid2020/partA/: README.md  dump_mfccs.sh  gujarati.sh  telugu.sh
config/: Makefile  common_make_rules  config  config.in  project.mak
docbook/: Makefile  bsv.sgml  concept.sgml  corpus.sgml  deploy.sgml  diphone.sgml  estman.sgml  eval.sgml  festival.sgml  festman.sgml  future.sgml  grapheme.sgml  install.sgml  intro.sgml  jpdiphone.sgml  label.sgml  ldom.sgml  ldomfull.sgml  lexicons.sgml  machlearn.sgml  markup.sgml  nonenldom.sgml  phonetable.sgml  prosody.sgml  require.sgml  resources.sgml  scheme.sgml  speech.sgml  sps.sgml  stuff.ed  texi2docbook  text.sgml  unitsel.sgml  usukdiphone.sgml  waveform.sgml
docbook/figures/: Makefile  pm_bad_01.eps  pm_raw_01.eps  pm_raw_zoom01.eps  pm_raw_zoom02.eps  pm_raw_zoom03.eps  wave_clean.eps  wave_noisey.eps
src/: Makefile
src/clustergen/: .clustergen_build.scm.swp  CLUSTERGEN_cg.scm  CLUSTERGEN_statenames.scm  HOWTO  Makefile  SPTK-3.6.patch  a2d.pl  a2l.pl  build_cg_rfs_voice  build_cg_voice  build_cg_world_rfs_voice  build_cg_world_voice  build_rfs  cg_get_f0_feats  cg_get_feats  cg_get_feats_all  cg_get_feats_all_traj  cg_get_mcd  cg_get_track  cg_lpc_resynth_main.c  cg_mco  cg_mlpg  cg_resynth  cg_resynth_world  cg_test  clustergen.scm  clustergen_build.scm  d2a.pl  do_cga  do_clustergen  do_move_label  do_move_label_me  do_xsent  find_dg  find_nstates  find_wstop  freq_response_vector_gen  get_cd_dtw  get_cd_dtw_mgc  get_str_sptk  (+27 more)
src/db_example/: Makefile
src/diphones/: Makefile  darpaasmrpa.scm  darpaaswb.scm  diphlist.scm  ja_schema.scm  make_diph_index  make_diph_index.sh  make_diphs_utts.scm  setup_diphone  setup_mbrola  uk_schema.scm  us_schema.scm
src/duration/: Makefile  dur.feats  logdurn.scm  make_dur_model
src/ehmm/: Makefile
src/ehmm/etc/: Makefile
src/ehmm/scripts/: Makefile  do_ehmm
src/ehmm/src/: ConvertFeatsFileToBinaryFormat.cc  FeatureExtraction.cc  Makefile  ScaleBinaryFeats.cc  edec.cc  ehmm.cc  header.h  make.depend
src/eval/: Makefile  abtest  evallog.cgi  mostest  wave2html  wave2html.scm
src/falcon/: .blocks.py.swp  .dataprep_addtext.py.swp  .hparams_arctic.py.swp  .layers.py.swp  .models.py.swp  .prepare_data_phseq.py.swp  .synthesize.swp  .synthesize_tacotronone.py.swp  .train_tacotronone.py.swp  .train_tacotrononeseqwise.py.swp  Judith.md  Makefile  README.md  blocks.py  build_tacotronone.sh  build_tacotronone_v2.sh  build_vits.sh  dataprep_addchars.py  dataprep_addindiantext.py  dataprep_addlspec.py  dataprep_addmspec.py  dataprep_addphones.py  dataprep_addtext.py  dataprep_addtones.py  hparams_arctic.py  hyperparameters.py  layers.py  models.py  models.py.save  models.py.save.1  opti.py  prepare_data.py  prepare_data_phseq.py  prepare_data_phseq.py.save  prepare_data_phseq_falconfeats.py  prepare_data_phseq_falconfeatsv2.py  readme.txt  synthesize_multispeaker.py  synthesize_subsentence_phones.py  synthesize_tacotronone.py  (+19 more)
src/falcon/cgn/: __init__.py  config.py  data.py  export.py  generate.py  inference.py  model.py  prepare_data.py  prosody.py  snac_codec.py  tokenizer.py  train.py
src/falcon/judith/: 128.2.211.22  add_py2neo.py  add_to_graph.py  arxiv_stuff.py  basic_assistant.py  config.py  experiment_tracking.py  extend_py2neo.py  fitbit_test.py  judith.py  judith_arxiv.py  judith_arxiv_csv.py  postpapers_to_fb.py  postquotes_to_fbgroup.py  run_arxiv.sh  run_quotes.sh  test_py2neo.py  test_tbgraph.py  (+2 more)
src/general/: Makefile  add_noise  align_phones  cmn  cmn_main.cc  contour_powernormalize  display_f0  display_sg  do_build  emu_f0.tpl  emu_hier.tpl  emu_lab.tpl  emu_pm.tpl  emu_sg.tpl  emu_single_f0.tpl  find_db_duration  find_num_available_cpu  find_powercontours  find_powerfactors  find_unknowns  find_unknowns.sh  fix_pm  fix_pm_main.cc  get_lars  get_wavs  guess_voice_defs  make.depend  make_cmn  make_dirs  make_dist  make_f0  make_labs  make_lpc  make_pm  make_pm_epochs  make_pm_fix  make_pm_pmlab  make_pm_wave  make_pmlab_pm  make_samples  (+17 more)
src/grapheme/: Makefile  build_cg_grapheme_voice  grapheme_unicode.scm  latin_norm  make_cg_grapheme  sampa.bottom  sampa.table  sampa.top  unicode_sampa_mapping.scm
src/hts_build/: Makefile  VOICE_2.0_hts.scm  VOICE_hts.scm  build_hts  do_hts  f0range
src/interslice/: Makefile
src/intonation/: Makefile  f0.feats  find_f0_stats  impose.scm  make_f0_model  make_f0_pm  make_f0_pm_get_f0  make_f0_v_sptk  make_f0_v_world
src/ldom/: LDOM-mode.scm  LDOM_ldom.scm  Makefile  all.desc  build_ldom  build_ldom.scm  jtime.scm  ldom.desc  setup_ldom  tel.scm  time.scm
src/lts/: Makefile  build_lts  build_lts_rules  make_allows  make_allows-smt  ults  ults.scm
src/mllr/: Makefile  make.depend  mllr  mllr.cc  mllr_adapt
src/phrasyn/: HOWTO.org  Makefile  calc_break_f1.py  do_phrasyn  phrasyn.scm  test_phrasyn
src/promptselect/: Makefile  dataset_minus  dataset_select  dataset_subset  find_gpos  find_oovs  make_nice_prompts  text2utts  text2utts.scm
src/prosody/: Makefile  make_dirs_prosody  setup_prosody
src/spamf0/: Makefile  af.desc  make_spam  rmsecor  segphrase.desc  spamf0.scm  sylacc.desc
src/st/: Makefile  align_with_stress.scm  build_st_multipron.scm  build_stress_map.scm  sphinx_lab  sphinxtrain
src/unitsel/: CLUNITS_clunits.scm  Makefile  build3  build_clunits.scm  build_clunits_voice  make_mcep  setup_clunits  syllabic.scm  unitsel.desc
src/vc/: HOWTO  Makefile  build_transform
src/vox_diphone/: Makefile
src/vox_files/: Makefile  speaker.licence
voices/: README.md
voices/arabic/: README.md
(+712 files in other folders)
